# usagestatsd

./: .gitignore  Cargo.toml  README.md  usagestatsd.service  usagestatsd.xml
src/: comms.rs  main.rs  monitor.rs  process_handler.rs  store.rs
src/cnproc/: bindgen.sh  binding.rs  lib.rs  mod.rs  wrapper.h
src/package_backend/: alpm_backend.rs  mod.rs
