[package]
name = "usagestatsd"
version = "0.1.0"
authors = ["Danil Korennykh <bluskript@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alpm = { git = "https://github.com/Bluskript/alpm.rs.git", branch = "fix-send" }
libc = "0.2"
procfs = "0.8.1"
dbus-tokio = "0.5.2"
tokio = "0.2.22"
dbus = "0.8.0"
dbus-crossroads = "0.2.2"
cnproc = "0.2.1"
simple-error = "0.2"
crossbeam-channel = "0.5.0"
ctrlc = "3.1.8"
sled = "0.34.6"
tracing = "0.1.25"
tracing-subscriber = "0.2.16"
dbus-tree = "0.9.0"